--- a/app/views/partial/_header.html.erb
+++ b/app/views/partial/_header.html.erb
@@ -6,7 +6,7 @@
       <li>
         <ul class="header-menu-inner">
           <li><%= link_to 'リストを作成する', '#', class: 'nav-link list-create' %></li>
-          <li><%= link_to 'サインアウト', '#', class: 'nav-link' %></li>
+          <li><%= link_to 'ログアウト', logout_path, class: 'nav-link' %></li>
         </ul>
       </li>
     </ul>
