--- a/app/views/partial/_header.html.erb
+++ b/app/views/partial/_header.html.erb
@@ -5,7 +5,7 @@
       <li class="header-menu-title"><%= link_to "TaskKanban", root_path, class: 'nav-link' %></li>
       <li>
         <ul class="header-menu-inner">
-          <li><%= link_to 'リストを作成する', '#', class: 'nav-link list-create' %></li>
+          <li><%= link_to 'リストを作成する', new_list_path, class: 'nav-link list-create' %></li>
           <li><%= link_to 'ログアウト', logout_path, class: 'nav-link' %></li>
         </ul>
       </li>
