--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,11 @@
-<h1>I'm top#index</h1>
-
-<%= link_to 'button', '#', class: 'btn btn-primary' %>
+<div class="top-page">
+  <div class="list-wrapper">
+    <% @lists.each do |list| %>
+      <div class="list">
+        <div class="list-header">
+          <h2 class="list-header-title"><%= list.title %></h2>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
