--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,6 +4,9 @@
       <div class="list">
         <div class="list-header">
           <h2 class="list-header-title"><%= list.title %></h2>
+          <div class="list-header-action">
+            <%= link_to(content_tag(:i, '', class: 'fas fa-pen'), edit_list_path(list)) %>
+          </div>
         </div>
       </div>
     <% end %>
