[feat] ToDoカード削除機能　実装
controller) ListsController#destroyを定義
view) ToDoカード内に削除ボタンを実装

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -92,6 +92,9 @@ body {
             font-size: 18px;
             color: blue;
           }
+          .fa-trash {
+            margin-right: 10px;  
+          }
         }
       }
     }
