--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -84,7 +84,7 @@ body {
         align-items: center;
         justify-content: space-between;
         &-title{
-          font-size: 20px;
+          font-size: 30px;
           margin: 0;
         }
         &-action {
@@ -100,6 +100,10 @@ body {
       .card-wrapper {
         overflow-y: scroll;
         max-height: 76vh;
+        .card-show-link {
+          text-decoration: none;
+          color: #323232;
+        }
         .card{
           margin-bottom: 10px;
           padding: 10px;
