--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -12,12 +12,14 @@
 
         <div class="card-wrapper">
           <% list.cards.each do |card| %>
+            <%= link_to list_card_path(list, card), class: 'card-show-link' do %>
             <div class="card">
               <h3 class="card-titile"><%= card.title %></h3>
               <% if card.memo.size > 0 %>
                 <div class="card-detail is-exist"><i class="fas fa-bars"></i></div>
-              <% end  %>
+              <% end %>
             </div> 
+            <% end %>
           <% end %>
 
           <div class="add-card">
