[feat]Card削除機能の実装
controller) CardsController#destroy
view) Card詳細画面に削除リンクを追加
style) 削除リンクのスタイルを設定

--- a/app/assets/stylesheets/cards/show.scss
+++ b/app/assets/stylesheets/cards/show.scss
@@ -29,6 +29,9 @@
             opacity: .7;
           }
         }
+        &.delete-btn {
+          margin-top: 20px;
+        }
       }
     }
   }
