[feat] Cardの親Listの変更機能を実装
CardsController#edit に@listsを追加
編集画面にセレクトボックスを追加

--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -12,6 +12,10 @@
         <%= f.label :memo %>
         <%= f.text_area :memo, class: 'form-control card-form-memo', placeholder: '詳細' %>
       </div>
+      <div class="card-edit-form-memo">
+        <label>リスト名</label>
+        <%= select :card, :list_id, @lists.map{ |l| [l.title, l.id]},{}, { class: 'form-control'} %>
+      </div>
       <div class="text-center"><%= f.submit '作成する', class: 'submit-btn-edit-list btn btn-success rounded-pill' %></div>
     <% end %>
   </div>
