--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  @import 'top';
+ @import 'user_sessions/new';
  @import 'lists/new';
  @import 'cards/new';
  @import 'cards/show';
