[style] ユーザー新規登録画面のスタイルを修正
#9(ログイン画面)のスタイル設定を模倣
view) class名の変更・classの追加
scss) class変更に合わせて変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
  @import 'font-awesome';
  @import 'top';
  @import 'user_sessions/new';
+ @import 'users/new';
  @import 'lists/new';
  @import 'cards/new';
  @import 'cards/show';
