--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New User</h1>
+<div class="new-user-page">
+  <div class="title-area">
+    <h1>アカウント新規作成</h1>
+  </div>
+  <div class="container">
+    <%= render 'form', user: @user %>
 
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+    <div class="text-center">
+      <%= link_to 'ログインする', login_path, class: 'link-to-login-page' %>
+    </div>
+  </div>
+</div>
