[feat] エラーメッセージ表示/日本語化機能を実装
ja.ymlを作成、config設定により日本語化完了
view) 各フォーム画面にpartial/error_messages.html.erbの埋め込みを完了
controller) 入力フォームを空のまま登録した時のparam is missing error or value is empty解消のため.requireを削除
※エラーメッセージのスタイルは未編集

--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="card-edit-page">
   <div class="container">
     <%= form_with model: @card, url: {action: :update}, html: {class:'card-edit-form'}, local: true do |f| %>
-      <% if @card.errors.any? %>
-        <p class='text-danger'>タイトルは1〜255文字以内で入力してください</p>
-      <% end %>
+
+      <%= render 'partial/error_messages', object: f.object %>
+
       <div class="card-edit-form-title">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control card-form-title', placeholder: 'カード名' %>
@@ -14,7 +14,7 @@
       </div>
       <div class="card-edit-form-memo">
         <label>リスト名</label>
-        <%= select :card, :list_id, @lists.map{ |l| [l.title, l.id]},{}, { class: 'form-control'} %>
+          <%= select :card, :list_id, @lists.map{ |l| [l.title, l.id]},{}, { class: 'form-control'} %>
       </div>
       <div class="text-center"><%= f.submit '作成する', class: 'submit-btn-edit-list btn btn-success rounded-pill' %></div>
     <% end %>
