--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,7 @@
 <%= form_with(model: user, html: {class: 'mt-5, user-new-form'}, local: true) do |form| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
+  <%= render 'partial/error_messages', object: form.object %>
+
   <%# sorceryのデフォルトでは
   :email, :crypted_password, :salt の入力フォーム
   → :name, :email, :password, :password_confirmation に変更 %>
