[style]エラーメッセージのスタイルを設定

--- a/app/views/partial/_error_messages.html.erb
+++ b/app/views/partial/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if object.present? %>
   <% if object.errors.any? %>
     <div>
-      <ul>
+      <ul class='error-messages'>
       <% object.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
