--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,3 +67,14 @@
     font-weight: bold;
   }
 }
+
+.error-messages {
+  > li {
+    padding: 10px;
+    list-style: none;
+    font-size: 1.3rem;
+    text-align: center;
+    background-color: #fce8e8;
+    color: #f78b8b;
+    }
+  }
